test/functions/generic/notGenericQ-formal.chpl
record R { }

proc a(x: R(?)) { }
var r: R;
a(r);
